# banksy

./: .gitignore  CMakeLists.txt  README.md
include/: account.h  bank.h  file_store.h  transaction.h
src/: account.cpp  bank.cpp  file_store.cpp  transaction.cpp
